--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-http://download.pytorch.org/whl/cu80/torch-0.3.0.post4-cp27-cp27mu-linux_x86_64.whl
+http://download.pytorch.org/whl/cu90/torch-0.3.1-cp27-cp27mu-linux_x86_64.whl
 torchvision
 tqdm
 scikit-learn
@@ -10,4 +10,6 @@ scipy
 ipdb
 opencv-python
 hickle
+unittest2
 matplotlib
+line_profiler
