--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ hickle
 unittest2
 matplotlib
 line_profiler
+
+# for compatible with the original PredNet (Keras) project
+theano==0.9.0
+tensorflow==1.2.1
+keras==2.0.6
