--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-http://download.pytorch.org/whl/cu90/torch-0.3.1-cp27-cp27mu-linux_x86_64.whl
+#http://download.pytorch.org/whl/cu90/torch-0.3.1-cp27-cp27mu-linux_x86_64.whl
+torch
 torchvision
 tqdm
 scikit-learn
@@ -11,6 +12,8 @@ hickle
 matplotlib
 cachetools
 ddlogger
+pathlib2
+filelock
 
 # IDE support
 pylint
