--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-#http://download.pytorch.org/whl/cu90/torch-0.3.1-cp27-cp27mu-linux_x86_64.whl
 torch
 torchvision
 tqdm
@@ -8,11 +7,9 @@ pylatex
 numpy==1.14.5
 scipy
 opencv-python
-opencv-contrib-python
 hickle
 matplotlib
 cachetools
-ddlogger
 filelock
 
 # IDE support
@@ -20,15 +17,19 @@ pylint
 typing
 
 # for debugging
-line_profiler
+#line_profiler
 unittest2
 ipdb
 
 # for visualization
-tensorboard==1.7.0
-tensorboardX
+#tensorboard==1.7.0
+#tensorboardX
 
 # for compatible with the original PredNet (Keras) project
-theano==0.9.0
-tensorflow==1.2.1
-keras==2.0.6
+#theano==0.9.0
+#tensorflow==1.2.1
+#keras==2.0.6
+
+# for compatible with the original pytorch-faster-rcnn project
+cffi
+easydict==1.6
