--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -1,7 +1,7 @@
 -r requirements.txt
 
-# for debugging
-line_profiler
+# for profiling
+-r requirements-pfl.txt
 
 # for visualization
 tensorboard==1.7.0
