--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ torch
 torchvision
 tqdm
 scikit-learn
-jupyter
 pylatex
 numpy==1.14.5
 scipy
@@ -16,18 +15,17 @@ filelock
 pylint
 typing
 
+# for experiments
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+ipython==6.4.0
+prompt-toolkit==1.0.15
+
 # for debugging
 unittest2
 ipdb
-
-# for visualization
-#tensorboard==1.7.0
-#tensorboardX
-
-# for compatible with the original PredNet (Keras) project
-#theano==0.9.0
-#tensorflow==1.2.1
-#keras==2.0.6
 
 # for compatible with the original pytorch-faster-rcnn project
 cffi
