--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -3,18 +3,14 @@
 # for profiling
 -r requirements-pfl.txt
 
-# for visualization
-tensorboard==1.7.0
-tensorboardX
-
 # for compatible with the original PredNet (Keras) project
-theano==0.9.0
-tensorflow==1.2.1
-keras==2.0.6
+#theano==0.9.0
+#tensorflow==1.2.1
+#keras==2.0.6
 
 # for compatible with the original pytorch-faster-rcnn project
-cffi
-easydict==1.6
+#cffi
+#easydict==1.6
 
 # for experiment (extended)
 jupyter_contrib_nbextensions
