Larger scale experiments

--- a/src/grplaincae/runs/eval.0.ini
+++ b/src/grplaincae/runs/eval.0.ini
@@ -5,9 +5,9 @@ downsample_scale=3
 [model]
 model_name=wide_pred9_f1to8
 run_name=pfx
-progress=0,1000
+progress=1,1248
 
 [eval]
-indices=0,100
+indices=0,400
 temperature=1.0
-device=cpu
+device=cuda
