--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-torch
+torch==1.0.0
 torchvision
 tqdm
 scikit-learn
+scikit-image
 pylatex
 numpy==1.14.5
 scipy
@@ -16,12 +17,8 @@ pylint
 typing
 
 # for experiments
-jupyter==1.0.0
-jupyter-client==5.2.3
-jupyter-console==5.2.0
-jupyter-core==4.4.0
-ipython==6.4.0
-prompt-toolkit==1.0.15
+blllib
+jupyter
 
 # for debugging
 unittest2
